fix firefox layout bug

--- a/app/assets/stylesheets/default/sponsor.css.scss
+++ b/app/assets/stylesheets/default/sponsor.css.scss
@@ -30,7 +30,7 @@
   -moz-appearance: none;
   appearance: none;
   border: none;
-  padding: 0 55px 0 19px;
+  padding: 12px 0px 12px 19px;
 }
 
 #sponsor_payment_type{
@@ -42,7 +42,7 @@
   -moz-appearance: none;
   appearance: none;
   border: none;
-  padding: 0 55px 0 19px;
+  padding: 12px 0px 12px 19px;
 }
 
 .ccv{
